src/com/fo/mini4/Mini4Parser.java
// $ANTLR ANTLRVersion> Mini4Parser.java generatedTimestamp>

package com.fo.mini4;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class Mini4Parser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__13=1, T__12=2, T__11=3, T__10=4, T__9=5, T__8=6, T__7=7, T__6=8, T__5=9, 
		T__4=10, T__3=11, T__2=12, T__1=13, T__0=14, BOOL=15, NIL=16, MUL=17, 
		DIV=18, ADD=19, SUB=20, ID=21, INT=22, EQ=23, NE=24, LT=25, LE=26, GT=27, 
		GE=28, AND=29, OR=30, NOT=31, FLOAT=32, SL_COMMENT=33, ML_COMMENT=34, 
		Q_STRING=35, QQ_STRING=36, WS=37;
	public static final String[] tokenNames = {
		"<INVALID>", "')'", "'function'", "'.'", "','", "'print'", "'('", "'return'", 
		"'='", "';'", "'def'", "'{'", "'}'", "'println'", "'assert'", "BOOL", 
		"'nil'", "'*'", "'/'", "'+'", "'-'", "ID", "INT", "'=='", "'!='", "'<'", 
		"'<='", "'>'", "'>='", "'&&'", "'||'", "'!'", "FLOAT", "SL_COMMENT", "ML_COMMENT", 
		"Q_STRING", "QQ_STRING", "WS"
	};
	public static final int
		RULE_prog = 0, RULE_stat = 1, RULE_expr = 2, RULE_block = 3, RULE_brick = 4, 
		RULE_qid = 5, RULE_postfix = 6, RULE_functionCall = 7, RULE_mapExpr = 8, 
		RULE_mapElDecl = 9, RULE_parDefList = 10;
	public static final String[] ruleNames = {
		"prog", "stat", "expr", "block", "brick", "qid", "postfix", "functionCall", 
		"mapExpr", "mapElDecl", "parDefList"
	};

	@Override
	public String getGrammarFileName() { return "Mini4.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }



	public Mini4Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgContext extends ParserRuleContext<Token> {
		public StatContext stat(int i) {
			return getRuleContext(StatContext.class,i);
		}
		public List<? extends StatContext> stat() {
			return getRuleContexts(StatContext.class);
		}
		public ProgContext(ParserRuleContext<Token> parent, int state) {
			super(parent, state);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Mini4Visitor ) return ((Mini4Visitor<T>)visitor).visitProg(this);
			else return null;
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, 0);
		enterRule(_localctx, RULE_prog);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(23); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(22); stat();
				}
				}
				setState(25); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==2 || _la==5 || _la==6 || _la==7 || _la==10 || _la==11 || _la==13 || _la==14 || _la==BOOL || _la==NIL || _la==ID || _la==INT || _la==FLOAT || _la==Q_STRING || _la==QQ_STRING );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatContext extends ParserRuleContext<Token> {
		public StatContext(ParserRuleContext<Token> parent, int state) {
			super(parent, state);
		}
		@Override public int getRuleIndex() { return RULE_stat; }
	 
		public StatContext() { }
		public void copyFrom(StatContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class AssignContext extends StatContext {
		public QidContext qid() {
			return getRuleContext(QidContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public AssignContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Mini4Visitor ) return ((Mini4Visitor<T>)visitor).visitAssign(this);
			else return null;
		}
	}
	public static class DefContext extends StatContext {
		public TerminalNode<Token> ID() { return getToken(Mini4Parser.ID, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public DefContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Mini4Visitor ) return ((Mini4Visitor<T>)visitor).visitDef(this);
			else return null;
		}
	}
	public static class ExprLabelContext extends StatContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public ExprLabelContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Mini4Visitor ) return ((Mini4Visitor<T>)visitor).visitExprLabel(this);
			else return null;
		}
	}
	public static class PrintlnContext extends StatContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public PrintlnContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Mini4Visitor ) return ((Mini4Visitor<T>)visitor).visitPrintln(this);
			else return null;
		}
	}
	public static class AssertContext extends StatContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public AssertContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Mini4Visitor ) return ((Mini4Visitor<T>)visitor).visitAssert(this);
			else return null;
		}
	}
	public static class ReturnLabelContext extends StatContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public ReturnLabelContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Mini4Visitor ) return ((Mini4Visitor<T>)visitor).visitReturnLabel(this);
			else return null;
		}
	}
	public static class PrintContext extends StatContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public PrintContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Mini4Visitor ) return ((Mini4Visitor<T>)visitor).visitPrint(this);
			else return null;
		}
	}
	public static class BlockLabelContext extends StatContext {
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public BlockLabelContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Mini4Visitor ) return ((Mini4Visitor<T>)visitor).visitBlockLabel(this);
			else return null;
		}
	}

	public final StatContext stat() throws RecognitionException {
		StatContext _localctx = new StatContext(_ctx, 2);
		enterRule(_localctx, RULE_stat);
		int _la;
		try {
			setState(60);
			//_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
				case 1:
					_localctx = new DefContext(_localctx);
					enterOuterAlt(_localctx, 1);
					{
					setState(27); match(10);
					setState(28); match(ID);
					setState(31);
					//_errHandler.sync(this);
					_la = _input.LA(1);
					if ( _la==8 ) {
						{
						setState(29); match(8);
						setState(30); expr(0);
						}
					}

					setState(33); match(9);
					}
					break;
				case 2:
					_localctx = new AssignContext(_localctx);
					enterOuterAlt(_localctx, 2);
					{
					setState(34); qid();
					setState(35); match(8);
					setState(36); expr(0);
					setState(37); match(9);
					}
					break;
				case 3:
					_localctx = new AssertContext(_localctx);
					enterOuterAlt(_localctx, 3);
					{
					setState(39); match(14);
					setState(40); expr(0);
					setState(41); match(9);
					}
					break;
				case 4:
					_localctx = new PrintContext(_localctx);
					enterOuterAlt(_localctx, 4);
					{
					setState(43); match(5);
					setState(44); expr(0);
					setState(45); match(9);
					}
					break;
				case 5:
					_localctx = new PrintlnContext(_localctx);
					enterOuterAlt(_localctx, 5);
					{
					setState(47); match(13);
					setState(48); expr(0);
					setState(49); match(9);
					}
					break;
				case 6:
					_localctx = new ReturnLabelContext(_localctx);
					enterOuterAlt(_localctx, 6);
					{
					setState(51); match(7);
					setState(53);
					//_errHandler.sync(this);
					_la = _input.LA(1);
					if ( _la==2 || _la==6 || _la==11 || _la==BOOL || _la==NIL || _la==ID || _la==INT || _la==FLOAT || _la==Q_STRING || _la==QQ_STRING ) {
						{
						setState(52); expr(0);
						}
					}

					setState(55); match(9);
					}
					break;
				case 7:
					_localctx = new BlockLabelContext(_localctx);
					enterOuterAlt(_localctx, 7);
					{
					setState(56); block();
					}
					break;
				case 8:
					_localctx = new ExprLabelContext(_localctx);
					enterOuterAlt(_localctx, 8);
					{
					setState(57); expr(0);
					setState(58); match(9);
					}
					break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprContext extends ParserRuleContext<Token> {
		public int _p;
		public ExprContext(ParserRuleContext<Token> parent, int state) { super(parent, state); }
		public ExprContext(ParserRuleContext<Token> parent, int state, int _p) {
			super(parent, state);
			this._p = _p;
		}
		@Override public int getRuleIndex() { return RULE_expr; }
	 
		public ExprContext() { }
		public void copyFrom(ExprContext ctx) {
			super.copyFrom(ctx);
			this._p = ctx._p;
		}
	}
	public static class AndExprContext extends ExprContext {
		public Token op;
		public TerminalNode<Token> AND() { return getToken(Mini4Parser.AND, 0); }
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<? extends ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public AndExprContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Mini4Visitor ) return ((Mini4Visitor<T>)visitor).visitAndExpr(this);
			else return null;
		}
	}
	public static class AddSubExprContext extends ExprContext {
		public Token op;
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<? extends ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public AddSubExprContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Mini4Visitor ) return ((Mini4Visitor<T>)visitor).visitAddSubExpr(this);
			else return null;
		}
	}
	public static class MulDivExprContext extends ExprContext {
		public Token op;
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<? extends ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public MulDivExprContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Mini4Visitor ) return ((Mini4Visitor<T>)visitor).visitMulDivExpr(this);
			else return null;
		}
	}
	public static class RelExprContext extends ExprContext {
		public Token op;
		public TerminalNode<Token> GE() { return getToken(Mini4Parser.GE, 0); }
		public TerminalNode<Token> GT() { return getToken(Mini4Parser.GT, 0); }
		public TerminalNode<Token> LT() { return getToken(Mini4Parser.LT, 0); }
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<? extends ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public TerminalNode<Token> LE() { return getToken(Mini4Parser.LE, 0); }
		public RelExprContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Mini4Visitor ) return ((Mini4Visitor<T>)visitor).visitRelExpr(this);
			else return null;
		}
	}
	public static class BrickLabelContext extends ExprContext {
		public BrickContext brick() {
			return getRuleContext(BrickContext.class,0);
		}
		public BrickLabelContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Mini4Visitor ) return ((Mini4Visitor<T>)visitor).visitBrickLabel(this);
			else return null;
		}
	}
	public static class EqExprContext extends ExprContext {
		public Token op;
		public TerminalNode<Token> EQ() { return getToken(Mini4Parser.EQ, 0); }
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<? extends ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public TerminalNode<Token> NE() { return getToken(Mini4Parser.NE, 0); }
		public EqExprContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Mini4Visitor ) return ((Mini4Visitor<T>)visitor).visitEqExpr(this);
			else return null;
		}
	}
	public static class OrExprContext extends ExprContext {
		public Token op;
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<? extends ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public TerminalNode<Token> OR() { return getToken(Mini4Parser.OR, 0); }
		public OrExprContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Mini4Visitor ) return ((Mini4Visitor<T>)visitor).visitOrExpr(this);
			else return null;
		}
	}

	public final ExprContext expr(int _p) throws RecognitionException {
		ParserRuleContext<Token> _parentctx = _ctx;
		ExprContext _localctx = new ExprContext(_ctx, 4, _p);
		ExprContext _prevctx = _localctx;
		int _startState = 4;
		pushNewRecursionContext(_localctx, RULE_expr);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			_localctx = new BrickLabelContext(_localctx);
			_ctx = _localctx;
			_prevctx = _localctx;

			setState(63); brick();
			}
			_ctx.stop = _input.LT(-1);
			setState(85);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					_prevctx.stop = _input.LT(-1);
					{
					setState(83);
					//_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
						case 1:
							{
							_localctx = new MulDivExprContext(new ExprContext(_parentctx, _startState, _p));
							_localctx.addChild(_prevctx);
							pushNewRecursionContext(_localctx, RULE_expr);
							_localctx.start = _prevctx.start;
							setState(65);
							if (!(7 >= _localctx._p)) throw new FailedPredicateException(this, "7 >= $_p");
							setState(66);
							((MulDivExprContext)_localctx).op = _input.LT(1);
							_la = _input.LA(1);
							if ( !(_la==MUL || _la==DIV) ) {
								((MulDivExprContext)_localctx).op = (Token)_errHandler.recoverInline(this);
							}
							consume();
							setState(67); expr(8);
							}
							break;
						case 2:
							{
							_localctx = new AddSubExprContext(new ExprContext(_parentctx, _startState, _p));
							_localctx.addChild(_prevctx);
							pushNewRecursionContext(_localctx, RULE_expr);
							_localctx.start = _prevctx.start;
							setState(68);
							if (!(6 >= _localctx._p)) throw new FailedPredicateException(this, "6 >= $_p");
							setState(69);
							((AddSubExprContext)_localctx).op = _input.LT(1);
							_la = _input.LA(1);
							if ( !(_la==ADD || _la==SUB) ) {
								((AddSubExprContext)_localctx).op = (Token)_errHandler.recoverInline(this);
							}
							consume();
							setState(70); expr(7);
							}
							break;
						case 3:
							{
							_localctx = new RelExprContext(new ExprContext(_parentctx, _startState, _p));
							_localctx.addChild(_prevctx);
							pushNewRecursionContext(_localctx, RULE_expr);
							_localctx.start = _prevctx.start;
							setState(71);
							if (!(5 >= _localctx._p)) throw new FailedPredicateException(this, "5 >= $_p");
							setState(72);
							((RelExprContext)_localctx).op = _input.LT(1);
							_la = _input.LA(1);
							if ( !(_la==LT || _la==LE || _la==GT || _la==GE) ) {
								((RelExprContext)_localctx).op = (Token)_errHandler.recoverInline(this);
							}
							consume();
							setState(73); expr(6);
							}
							break;
						case 4:
							{
							_localctx = new EqExprContext(new ExprContext(_parentctx, _startState, _p));
							_localctx.addChild(_prevctx);
							pushNewRecursionContext(_localctx, RULE_expr);
							_localctx.start = _prevctx.start;
							setState(74);
							if (!(4 >= _localctx._p)) throw new FailedPredicateException(this, "4 >= $_p");
							setState(75);
							((EqExprContext)_localctx).op = _input.LT(1);
							_la = _input.LA(1);
							if ( !(_la==EQ || _la==NE) ) {
								((EqExprContext)_localctx).op = (Token)_errHandler.recoverInline(this);
							}
							consume();
							setState(76); expr(5);
							}
							break;
						case 5:
							{
							_localctx = new AndExprContext(new ExprContext(_parentctx, _startState, _p));
							_localctx.addChild(_prevctx);
							pushNewRecursionContext(_localctx, RULE_expr);
							_localctx.start = _prevctx.start;
							setState(77);
							if (!(3 >= _localctx._p)) throw new FailedPredicateException(this, "3 >= $_p");
							setState(78); ((AndExprContext)_localctx).op = match(AND);
							setState(79); expr(4);
							}
							break;
						case 6:
							{
							_localctx = new OrExprContext(new ExprContext(_parentctx, _startState, _p));
							_localctx.addChild(_prevctx);
							pushNewRecursionContext(_localctx, RULE_expr);
							_localctx.start = _prevctx.start;
							setState(80);
							if (!(2 >= _localctx._p)) throw new FailedPredicateException(this, "2 >= $_p");
							setState(81); ((OrExprContext)_localctx).op = match(OR);
							setState(82); expr(3);
							}
							break;
					}
					} 
				}
				setState(87);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext<Token> {
		public StatContext stat(int i) {
			return getRuleContext(StatContext.class,i);
		}
		public List<? extends StatContext> stat() {
			return getRuleContexts(StatContext.class);
		}
		public BlockContext(ParserRuleContext<Token> parent, int state) {
			super(parent, state);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Mini4Visitor ) return ((Mini4Visitor<T>)visitor).visitBlock(this);
			else return null;
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, 6);
		enterRule(_localctx, RULE_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(88); match(11);
			setState(92);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ( _la==2 || _la==5 || _la==6 || _la==7 || _la==10 || _la==11 || _la==13 || _la==14 || _la==BOOL || _la==NIL || _la==ID || _la==INT || _la==FLOAT || _la==Q_STRING || _la==QQ_STRING ) {
				{
				{
				setState(89); stat();
				}
				}
				setState(94);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(95); match(12);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BrickContext extends ParserRuleContext<Token> {
		public BrickContext(ParserRuleContext<Token> parent, int state) {
			super(parent, state);
		}
		@Override public int getRuleIndex() { return RULE_brick; }
	 
		public BrickContext() { }
		public void copyFrom(BrickContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class QStringContext extends BrickContext {
		public TerminalNode<Token> Q_STRING() { return getToken(Mini4Parser.Q_STRING, 0); }
		public QStringContext(BrickContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Mini4Visitor ) return ((Mini4Visitor<T>)visitor).visitQString(this);
			else return null;
		}
	}
	public static class QidLabelContext extends BrickContext {
		public QidContext qid() {
			return getRuleContext(QidContext.class,0);
		}
		public QidLabelContext(BrickContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Mini4Visitor ) return ((Mini4Visitor<T>)visitor).visitQidLabel(this);
			else return null;
		}
	}
	public static class MapExprLabelContext extends BrickContext {
		public MapExprContext mapExpr() {
			return getRuleContext(MapExprContext.class,0);
		}
		public MapExprLabelContext(BrickContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Mini4Visitor ) return ((Mini4Visitor<T>)visitor).visitMapExprLabel(this);
			else return null;
		}
	}
	public static class FunctionDefContext extends BrickContext {
		public ParDefListContext parDefList() {
			return getRuleContext(ParDefListContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public FunctionDefContext(BrickContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Mini4Visitor ) return ((Mini4Visitor<T>)visitor).visitFunctionDef(this);
			else return null;
		}
	}
	public static class IntContext extends BrickContext {
		public TerminalNode<Token> INT() { return getToken(Mini4Parser.INT, 0); }
		public IntContext(BrickContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Mini4Visitor ) return ((Mini4Visitor<T>)visitor).visitInt(this);
			else return null;
		}
	}
	public static class FunctionCallLabelContext extends BrickContext {
		public FunctionCallContext functionCall() {
			return getRuleContext(FunctionCallContext.class,0);
		}
		public FunctionCallLabelContext(BrickContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Mini4Visitor ) return ((Mini4Visitor<T>)visitor).visitFunctionCallLabel(this);
			else return null;
		}
	}
	public static class ParensContext extends BrickContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public ParensContext(BrickContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Mini4Visitor ) return ((Mini4Visitor<T>)visitor).visitParens(this);
			else return null;
		}
	}
	public static class BoolContext extends BrickContext {
		public TerminalNode<Token> BOOL() { return getToken(Mini4Parser.BOOL, 0); }
		public BoolContext(BrickContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Mini4Visitor ) return ((Mini4Visitor<T>)visitor).visitBool(this);
			else return null;
		}
	}
	public static class FloatContext extends BrickContext {
		public TerminalNode<Token> FLOAT() { return getToken(Mini4Parser.FLOAT, 0); }
		public FloatContext(BrickContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Mini4Visitor ) return ((Mini4Visitor<T>)visitor).visitFloat(this);
			else return null;
		}
	}
	public static class QqStringContext extends BrickContext {
		public TerminalNode<Token> QQ_STRING() { return getToken(Mini4Parser.QQ_STRING, 0); }
		public QqStringContext(BrickContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Mini4Visitor ) return ((Mini4Visitor<T>)visitor).visitQqString(this);
			else return null;
		}
	}
	public static class NilContext extends BrickContext {
		public TerminalNode<Token> NIL() { return getToken(Mini4Parser.NIL, 0); }
		public NilContext(BrickContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Mini4Visitor ) return ((Mini4Visitor<T>)visitor).visitNil(this);
			else return null;
		}
	}

	public final BrickContext brick() throws RecognitionException {
		BrickContext _localctx = new BrickContext(_ctx, 8);
		enterRule(_localctx, RULE_brick);
		int _la;
		try {
			setState(121);
			//_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
				case 1:
					_localctx = new IntContext(_localctx);
					enterOuterAlt(_localctx, 1);
					{
					setState(97); match(INT);
					}
					break;
				case 2:
					_localctx = new FloatContext(_localctx);
					enterOuterAlt(_localctx, 2);
					{
					setState(98); match(FLOAT);
					}
					break;
				case 3:
					_localctx = new BoolContext(_localctx);
					enterOuterAlt(_localctx, 3);
					{
					setState(99); match(BOOL);
					}
					break;
				case 4:
					_localctx = new NilContext(_localctx);
					enterOuterAlt(_localctx, 4);
					{
					setState(100); match(NIL);
					}
					break;
				case 5:
					_localctx = new QStringContext(_localctx);
					enterOuterAlt(_localctx, 5);
					{
					setState(101); match(Q_STRING);
					}
					break;
				case 6:
					_localctx = new QqStringContext(_localctx);
					enterOuterAlt(_localctx, 6);
					{
					setState(102); match(QQ_STRING);
					}
					break;
				case 7:
					_localctx = new QidLabelContext(_localctx);
					enterOuterAlt(_localctx, 7);
					{
					setState(103); qid();
					}
					break;
				case 8:
					_localctx = new ParensContext(_localctx);
					enterOuterAlt(_localctx, 8);
					{
					setState(104); match(6);
					setState(105); expr(0);
					setState(106); match(1);
					}
					break;
				case 9:
					_localctx = new MapExprLabelContext(_localctx);
					enterOuterAlt(_localctx, 9);
					{
					setState(108); match(11);
					setState(110);
					//_errHandler.sync(this);
					_la = _input.LA(1);
					if ( _la==ID ) {
						{
						setState(109); mapExpr();
						}
					}

					setState(112); match(12);
					}
					break;
				case 10:
					_localctx = new FunctionDefContext(_localctx);
					enterOuterAlt(_localctx, 10);
					{
					setState(113); match(2);
					setState(114); match(6);
					setState(116);
					//_errHandler.sync(this);
					_la = _input.LA(1);
					if ( _la==ID ) {
						{
						setState(115); parDefList();
						}
					}

					setState(118); match(1);
					setState(119); block();
					}
					break;
				case 11:
					_localctx = new FunctionCallLabelContext(_localctx);
					enterOuterAlt(_localctx, 11);
					{
					setState(120); functionCall();
					}
					break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class QidContext extends ParserRuleContext<Token> {
		public PostfixContext postfix(int i) {
			return getRuleContext(PostfixContext.class,i);
		}
